--- a/calculator.html
+++ b/calculator.html
@@ -54,15 +54,15 @@
     margin-left: 40px;*/
     .display {
   background-color: black;
-  width: 380px;          /* bigger width so text doesn't cut */
-  height: 60px;          /* bigger height */
-  font-size: 35px;       /* big numbers */
+  width: 380px;        
+  height: 60px;          
+  font-size: 35px;       
   text-align: right;
   color: white;
   border: none;
   
 
-  transform: translate(-160px, -50px);  /* SAME X position as buttons */
+  transform: translate(-160px, -50px);  
 }
 
     
