--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="device=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>CALCULATOR</title>
+     <meta name="description" content="this the calculator for calculation purpose.it is designed calculator ." />
     <style>
     html,body{
       margin:0;
