Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="device=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>CALCULATOR</title>
+    <meta name="google-site-verification" content="EEMuN1WNnuOZrhUzCN8vsBuJuEhBBa8pk-85PM8FPKg" />
      <meta name="description" content="this the calculator for calculation purpose.it is designed calculator ." />
     <style>
     html,body{
